# innowise_laboratory

lecture_1/: main.py  pyproject.toml
lecture_2/: profile.py
lecture_3/: main.py
lecture_4/: school.db  script_sqlite.sql
lecture_5/: pyproject.toml
lecture_5/book_api/: crud.py  database.py  main.py  models.py  schemas.py
